--- a/index2.html
+++ b/index2.html
@@ -9,14 +9,17 @@
 <body>
   <div class="content">
     <h1>Bem-vindo ao meu site!</h1>
-    <p>Desça para ver o efeito parallax.</p>
+    <p>Este é um site para teste de tags</p>
   </div>
 
   <div class="parallax"></div> <!-- A div com o efeito parallax -->
 
   <div class="content">
-    <h2>Mais conteúdo aqui</h2>
-    <p>Este é outro conteúdo que aparece depois de rolar a tela.</p>
+    <h2>Obrigado por visitar nosso site!</h2>
+    <p>Volte sempre!</p>
+    <div class="botão">
+      <td><a href="index.html" class="meubotao2">Voltar</a></td>
+  </div>
   </div>
 </body>
 </html>
